// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile export default arrow 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  default  function $default (...args) {
  return request({
    url: '/api/arrow',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"arrow\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;

exports[`Compile export types 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  function normal (...args) {
  return request({
    url: '/api/type/_normal',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"type-normal\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;

exports[`Compile nest function 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  function nestFunc (...args) {
  return request({
    url: '/api/nest/_nestFunc',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"nest-index-nestfunc\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;

exports[`Compile normally exported functions 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  function variableFuncExpression (...args) {
  return request({
    url: '/api/_variableFuncExpression',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-variablefuncexpression\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function variableFuncExpressionWithArgs (...args) {
  return request({
    url: '/api/_variableFuncExpressionWithArgs',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-variablefuncexpressionwithargs\\",
  \\"unstable_params\\": [
    \\"a\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function variableArrowFunction (...args) {
  return request({
    url: '/api/_variableArrowFunction',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-variablearrowfunction\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function variableArrowFunctionWithArgs (...args) {
  return request({
    url: '/api/_variableArrowFunctionWithArgs',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-variablearrowfunctionwithargs\\",
  \\"unstable_params\\": [
    \\"a\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function functionDeclartion (...args) {
  return request({
    url: '/api/_functionDeclartion',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-functiondeclartion\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function functionDeclartionWithArgs (...args) {
  return request({
    url: '/api/_functionDeclartionWithArgs',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-functiondeclartionwithargs\\",
  \\"unstable_params\\": [
    \\"a\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  default  function hasName (...args) {
  return request({
    url: '/api',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index\\",
  \\"unstable_params\\": [
    \\"args\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function dotdotdotArgs (...args) {
  return request({
    url: '/api/_dotdotdotArgs',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"index-dotdotdotargs\\",
  \\"unstable_params\\": [
    \\"args\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;

exports[`Compile params 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  function identifier (...args) {
  return request({
    url: '/api/param/_identifier',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"param-identifier\\",
  \\"unstable_params\\": [
    \\"a\\",
    \\"b\\",
    \\"c\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function assgin (...args) {
  return request({
    url: '/api/param/_assgin',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"param-assgin\\",
  \\"unstable_params\\": [
    \\"a\\",
    \\"b\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function rest (...args) {
  return request({
    url: '/api/param/_rest',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"param-rest\\",
  \\"unstable_params\\": [
    \\"a\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

export  function mix (...args) {
  return request({
    url: '/api/param/_mix',
    method: 'POST',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"param-mix\\",
  \\"unstable_params\\": [
    \\"a\\",
    \\"b\\",
    \\"c\\"
  ],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;

exports[`Compile type assert 1`] = `
"import { request } from '@midwayjs/hooks/request'


export  function typeAssert (...args) {
  return request({
    url: '/api/type-assert/_typeAssert',
    method: 'GET',
    data: {
      args: args,
    },
    meta: {
  \\"functionName\\": \\"type-assert-typeassert\\",
  \\"unstable_params\\": [],
  \\"functionGroup\\": \\"fusion-demo\\",
  \\"gateway\\": \\"http\\"
}
  })
}

"
`;
